# eps2svg

./: .gitignore  README.md  eps2emf.py  eps2svg-gui.spec  eps2svg.py  eps2svg_grid.py  eps2svg_pure.py  eps2svg_split.py  pyproject.toml
eps2pptx/: __init__.py  drawingml.py  package.py
eps2svg_gui/: __init__.py  __main__.py  app.py  convert_worker.py  file_list.py  grid_model.py  grid_overlay.py  icons.py  main_window.py  paths.py  pptx_worker.py  preview.py  split_window.py  split_worker.py
tests/: qt_app.py  test_backend_fallthrough.py  test_eps2emf.py  test_eps2pptx.py  test_eps2svg_grid.py  test_grid_model.py  test_grid_overlay.py  test_gui_app.py  test_gui_filelist.py  test_gui_paths.py  test_gui_preview.py  test_gui_smoke.py  test_gui_window.py  test_gui_worker.py  test_pptx_cli.py  test_pptx_drawingml.py  test_pptx_package.py  test_pptx_worker.py  test_pure_clip.py  test_pure_color.py  test_pure_operators.py  test_split.py  test_split_window.py  test_split_worker.py
tests/fixtures/: grid_3x3.eps  grid_irregular.eps  gsave_grouped.eps  mixed.eps  single_shape.eps
